
syntax = "proto3";

package CA_Service_1;

option java_package = "com.proto.CA_Service_1";
option java_multiple_files = true;



message UserLocationRequest {

  string userLocation = 1;

}

message UserLocationResponse{
  string location =1;

}

message OptionRequest{
  string serviceOption =1;

}

message OptionResponse{

  string serviceResponse =1;

}


service Information{

// Server Streaming
  rpc UserLocation (UserLocationRequest) returns (stream UserLocationResponse) {}

// Bidirectional
  rpc Option (stream OptionRequest) returns (stream OptionResponse) {}

    }